Configuration port for fabric 1.18.2